--- a/.github/workflows/enable_automerge.yaml
+++ b/.github/workflows/enable_automerge.yaml
@@ -9,11 +9,11 @@ on:
         type: string
         default: renovate[bot]
     secrets:
-      github_token:
+      gh_token:
         required: false
-      github_app_id:
+      gh_app_id:
         required: false
-      github_app_private_key:
+      gh_app_private_key:
         required: false
 
 jobs:
@@ -29,9 +29,9 @@ jobs:
       - uses: suzuki-shunsuke/github-token-action@a058de0a42e494414cf4c112436d663a06fd16c0 # v0.1.0
         id: token
         with:
-          github_token: ${{secrets.github_token}}
-          github_app_id: ${{secrets.github_app_id}}
-          github_app_private_key: ${{secrets.github_app_private_key}}
+          github_token: ${{secrets.gh_token}}
+          github_app_id: ${{secrets.gh_app_id}}
+          github_app_private_key: ${{secrets.gh_app_private_key}}
       - run: gh -R "$GITHUB_REPOSITORY" pr merge --merge --auto --delete-branch "$PR_NUMBER"
         env:
           GITHUB_TOKEN: ${{steps.token.outputs.token}} # Use GitHub App to trigger GitHub Actions Workflow by merge commit.
