--- a/.github/workflows/enable_automerge.yaml
+++ b/.github/workflows/enable_automerge.yaml
@@ -34,10 +34,8 @@ jobs:
     # Enable automerge to merge pull requests from Renovate automatically.
     runs-on: ${{fromJSON(inputs.runs-on)}}
     permissions: {}
-    # "! failure() && ! cancelled()" is required. success() returns false if dependent jobs are skipped. https://github.com/community/community/discussions/45058
-    # By default success() is used so we have to override success() by "! failure() && ! cancelled()"
     if: |
-      ! failure() && ! cancelled() && github.event.pull_request.user.login == inputs.renovate_login && contains(github.event.pull_request.body, ' **Automerge**: Enabled.')
+      github.event.pull_request.user.login == inputs.renovate_login && contains(github.event.pull_request.body, ' **Automerge**: Enabled.')
     steps:
       - run: |
           if [ "$MERGE_METHOD" = merge ] || [ "$MERGE_METHOD" = squash ] || [ "$MERGE_METHOD" = rebase ]; then
